Rename structure DBusSocketSet to DBusPollableSet and adjust the corresponding functions/files
Because the implementation of DBusSocketSet already supports non-socket
pollables like pipes and inotify fd on Unix, DBusPollableSet is a better
name.

--- a/cmake/dbus/CMakeLists.txt
+++ b/cmake/dbus/CMakeLists.txt
@@ -162,8 +162,8 @@ set (DBUS_UTIL_SOURCES
 	${DBUS_DIR}/dbus-message-factory.c
 	${DBUS_DIR}/dbus-message-util.c
 	${DBUS_DIR}/dbus-shell.c
-	${DBUS_DIR}/dbus-socket-set.c
-	${DBUS_DIR}/dbus-socket-set-poll.c
+	${DBUS_DIR}/dbus-pollable-set.c
+	${DBUS_DIR}/dbus-pollable-set-poll.c
 	${DBUS_DIR}/dbus-string-util.c
 	${DBUS_DIR}/dbus-sysdeps-util.c
 )
@@ -182,7 +182,7 @@ set (DBUS_UTIL_HEADERS
 	${DBUS_DIR}/dbus-mainloop.h
 	${DBUS_DIR}/dbus-message-factory.h
 	${DBUS_DIR}/dbus-shell.h
-	${DBUS_DIR}/dbus-socket-set.h
+	${DBUS_DIR}/dbus-pollable-set.h
 	${DBUS_DIR}/dbus-spawn.h
 	${DBUS_DIR}/dbus-test.h
 	${DBUS_DIR}/dbus-test-wrappers.h
@@ -237,7 +237,7 @@ endif (WIN32)
 if(DBUS_HAVE_LINUX_EPOLL)
         set(DBUS_UTIL_SOURCES
                 ${DBUS_UTIL_SOURCES}
-                ${DBUS_DIR}/dbus-socket-set-epoll.c
+                ${DBUS_DIR}/dbus-pollable-set-epoll.c
         )
 endif()
 
