--- a/doc/index.html.in
+++ b/doc/index.html.in
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>D-Bus Documentation Index</h1>
-<p>Version @DBUS_VERSION_STRING@</p>
+<p>Version @DBUS_VERSION@</p>
 
 <table>
  <tr>
@@ -36,6 +36,7 @@ application manuals
 <a href="dbus-test-plan.html">D-Bus Test Plan</a>
    <br>
    <br>
+<a href="api/index.html">libdbus API Documentation</a>
   </td>
   <td  valign=top>
 <a href="dbus-daemon.1.html">D-Bus Daemon manual</a>
