Install devhelp2 and api doc with cmake
Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -27,6 +27,7 @@ if (DBUS_ENABLE_DOXYGEN_DOCS)
         DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/api/html/index.html ${CMAKE_CURRENT_BINARY_DIR}/dbus.devhelp2
     )
     add_dependencies(doc devhelp2)
+    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/api/html/ DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/dbus/api)
 endif (DBUS_ENABLE_DOXYGEN_DOCS)
 
 find_program(XSLTPROC_EXECUTABLE xsltproc)
@@ -42,6 +43,7 @@ if(DBUS_HAVE_XSLTPROC)
         DEPENDS doxygen_to_devhelp.xsl api/html/index.html
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dbus.devhelp2 DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/dbus)
 endif()
 
 #
