--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -59,11 +59,7 @@ set (dbus_run_session_SOURCES
 )
 
 if(WIN32)
-    set(DBUS_VER_INTERNAL_NAME "dbus-send")
-    set(DBUS_VER_ORIGINAL_NAME "${DBUS_VER_INTERNAL_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(DBUS_VER_FILE_TYPE "VFT_APP")
-    configure_file(../dbus/versioninfo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
-    list(APPEND dbus_send_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
+    add_executable_version_info(dbus_send_SOURCES "dbus-send")
 endif()
 
 add_executable(dbus-send ${dbus_send_SOURCES})
@@ -71,11 +67,7 @@ target_link_libraries(dbus-send ${DBUS_LIBRARIES})
 install(TARGETS dbus-send ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if(WIN32)
-    set(DBUS_VER_INTERNAL_NAME "dbus-test-tool")
-    set(DBUS_VER_ORIGINAL_NAME "${DBUS_VER_INTERNAL_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(DBUS_VER_FILE_TYPE "VFT_APP")
-    configure_file(../dbus/versioninfo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
-    list(APPEND dbus_test_tool_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
+    add_executable_version_info(dbus_test_tool_SOURCES "dbus-test-tool")
 endif()
 
 add_executable(dbus-test-tool ${dbus_test_tool_SOURCES})
@@ -83,12 +75,7 @@ target_link_libraries(dbus-test-tool ${DBUS_LIBRARIES})
 install(TARGETS dbus-test-tool ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if(WIN32)
-    # version info and uac manifest can be combined in a binary because they use different resource types
-    set(DBUS_VER_INTERNAL_NAME "dbus-update-activation-environment")
-    set(DBUS_VER_ORIGINAL_NAME "${DBUS_VER_INTERNAL_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(DBUS_VER_FILE_TYPE "VFT_APP")
-    configure_file(../dbus/versioninfo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
-    list(APPEND dbus_update_activation_environment_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
+    add_executable_version_info(dbus_update_activation_environment_SOURCES "dbus-update-activation-environment")
 endif()
 if(WIN32 AND NOT MSVC)
     add_uac_manifest(dbus_update_activation_environment_SOURCES)
@@ -98,11 +85,7 @@ target_link_libraries(dbus-update-activation-environment ${DBUS_LIBRARIES})
 install(TARGETS dbus-update-activation-environment ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if(WIN32)
-    set(DBUS_VER_INTERNAL_NAME "dbus-launch")
-    set(DBUS_VER_ORIGINAL_NAME "${DBUS_VER_INTERNAL_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(DBUS_VER_FILE_TYPE "VFT_APP")
-    configure_file(../dbus/versioninfo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
-    list(APPEND dbus_launch_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
+    add_executable_version_info(dbus_launch_SOURCES "dbus-launch")
 endif()
 
 add_executable(dbus-launch ${dbus_launch_SOURCES})
@@ -113,11 +96,7 @@ endif (DBUS_BUILD_X11)
 install(TARGETS dbus-launch ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if(WIN32)
-    set(DBUS_VER_INTERNAL_NAME "dbus-monitor")
-    set(DBUS_VER_ORIGINAL_NAME "${DBUS_VER_INTERNAL_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(DBUS_VER_FILE_TYPE "VFT_APP")
-    configure_file(../dbus/versioninfo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
-    list(APPEND dbus_monitor_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/versioninfo-${DBUS_VER_INTERNAL_NAME}.rc)
+    add_executable_version_info(dbus_launch_SOURCES "dbus-monitor")
 endif()
 
 add_executable(dbus-monitor ${dbus_monitor_SOURCES})
