CI: Do the CMake native debug build from an Autotools `make dist`
We officially release dbus in the form of Autotools `make dist` tarballs,
but people who have downloaded those tarballs should be able to choose
the CMake build system. Our CI should assert that they can.

(The Autotools debug build already does a `make distcheck`, which
asserts that tarball releases can be used for an Autotools build.)

Signed-off-by: Simon McVittie <smcv@collabora.com>
Resolves: dbus#255

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
   - ci_variant=debug
   - ci_variant=reduced
   - ci_variant=legacy
-  - ci_buildsys=cmake
+  - ci_buildsys=cmake-dist
   - ci_host=i686-w64-mingw32
   - ci_host=i686-w64-mingw32 ci_buildsys=cmake ci_variant=debug
   - ci_host=x86_64-w64-mingw32 ci_variant=debug
