Adapt to API change in AX_CODE_COVERAGE version 28
AX_CODE_COVERAGE recently changed the way it embedded its Makefile rules
in the output file: instead of using @CODE_COVERAGE_RULES@, users
are now meant to include aminclude_static.am.

The new AX_CODE_COVERAGE is only in the latest autoconf-archive release,
version 2019.01.06, which is inconveniently new, so bundle everything
we need for the moment.

This requires us to stop using the deprecated CODE_COVERAGE_LDFLAGS
(which we still used to support older versions of autoconf-archive)
and replace them with CODE_COVERAGE_LIBS.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /.ccache/
 /Doxyfile
 /aclocal.m4
+/aminclude_static.am
 /autom4te.cache
 /build-aux/
 /bus/tmpfiles.d/dbus.conf
@@ -12,11 +13,11 @@
 /config.log
 /config.status
 /configure
+/dbus-1.*-coverage.info
+/dbus-1.*-coverage.info.tmp
+/dbus-1.*-coverage/
 /dbus-1.*.tar.*
 /dbus-1.*/
-/lcov.html/
-/lcov.info
-/lcov.info.tmp
 /libtool
 /m4/libtool.m4
 /m4/lt*.m4
