--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -309,7 +309,7 @@ endif
 noinst_PROGRAMS =
 
 # Add rules for code-coverage testing, as defined by AX_CODE_COVERAGE
-@CODE_COVERAGE_RULES@
+include $(top_srcdir)/aminclude_static.am
 
 clean-local:
 	$(AM_V_at)rm -fr ./.dbus-keyrings
